# Numberstation

./: .dmx.py.un~  .gitignore  animation.py  dmx.py  dmx.py~  numberstation.py  pyproject.toml  requirements.txt
static/: main.js
views/: index.html  number.html
