[tool.poetry]
name = "numberstation"
version = "0.1.0"
description = ""
authors = ["Stefan Bethke <stb@lassitu.de>"]

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
